Adds tests in ZeroDollarOrder
